--- a/Templates/frontpage.html
+++ b/Templates/frontpage.html
@@ -1,50 +1,56 @@
 {{define "frontpage"}}
-    <html>
-    <meta charset="UTF-8">
-    <head>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
-                integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.2/paper-full.js"
-                integrity="sha256-0UCYTfEkQlxl7Fy99RM2kU+ScyrKrW005WKxkeu3To0=" crossorigin="anonymous"></script>
-        <script src="/js/frontpage.js"></script>
-        <link rel="stylesheet" type="text/css" href="/css/frontpage.css">
+<html>
+<meta charset="UTF-8">
+<head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
+            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.2/paper-full.js"
+            integrity="sha256-0UCYTfEkQlxl7Fy99RM2kU+ScyrKrW005WKxkeu3To0=" crossorigin="anonymous"></script>
+    <script src="/js/frontpage.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/frontpage.css">
 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-              integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+          integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous"/>
 
 
-        <!-- bootstrap -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-              crossorigin="anonymous">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-                crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-                crossorigin="anonymous"></script>
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+          crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
 
-        <title>draw</title>
-    </head>
+    <title>draw</title>
+</head>
 
-    <body onload="run()">
-    <div class="canvas-container">
-        <canvas id="draw-canvas" resize>
-        </canvas>
-        <div id="UIModes">
-            <button type="button" class="btn btn-primary" id="UIPanMode">
-                <i class="fas fa-hand-rock fa-2x"></i>
-            </button>
-            <button type="button" class="btn btn-primary active" id="UIDrawMode">
-                <i class="fas fa-paint-brush fa-2x"></i>
-            </button>
-            <button type="button" class="btn btn-primary" id="UISelectMode">
-                <i class="fas fa-vector-square fa-2x"></i>
-            </button>
-            <button type="button" class="btn btn-primary" id="UIMoveSelectedMode">
-                <i class="fas fa-arrows-alt fa-2x"></i>
-            </button>
-        </div>
+<body onload="run()">
+{{template "settings"}}
+<div class="canvas-container">
+    <canvas id="draw-canvas" resize>
+    </canvas>
+    <div id="UIModes">
+        <button type="button" class="btn btn-primary" id="UIPanMode">
+            <i class="fas fa-hand-rock fa-2x"></i>
+        </button>
+        <button type="button" class="btn btn-primary active" id="UIDrawMode">
+            <i class="fas fa-paint-brush fa-2x"></i>
+        </button>
+        <button type="button" class="btn btn-primary" id="UISelectMode">
+            <i class="fas fa-vector-square fa-2x"></i>
+        </button>
+        <button type="button" class="btn btn-primary" id="UIMoveSelectedMode">
+            <i class="fas fa-arrows-alt fa-2x"></i>
+        </button>
+    </div>
+    <div id="UserSettings">
+        <button type="button" class="btn btn-primary" id="SettingsButton" data-toggle="modal"
+                data-target="#settingsModal">
+            <i class="fas fa-cog fa-2x"></i>
+        </button>
     </div>
     <div id="DrawSettings">
         <div class="card">
@@ -76,7 +82,59 @@
             </div>
         </div>
     </div>
+</div>
+
+</body>
+</html>
+{{end}}
+
+{{define "settings"}}
+<div class="modal fade" id="settingsModal">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Settings</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group row align-items-center">
+                        <label for="RequireName" class="col-sm-3 col-form-label">Require name</label>
+                        <div class="col-sm-9">
+                            <input type="checkbox" id="RequireName" aria-label="Checkbox for following text input">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="UserName" class="col-sm-3 col-form-label">Name:</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="UserName" placeholder="User name">
+                        </div>
+                    </div>
+
+                    <div class="form-group row align-items-center">
+                        <label for="enablePassword" class="col-sm-3 col-form-label">Require password</label>
+                        <div class="col-sm-9">
+                            <input type="checkbox" id="enablePassword"
+                                   aria-label="Checkbox for following text input">
+                        </div>
+                    </div>
+
+                    <div class="form-group row">
+                        <label for="RequiredPassword" class="col-sm-3 col-form-label">Password:</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="RequiredPassword" placeholder="User name">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
     </div>
-    </body>
-    </html>
+</div>
 {{end}}
