--- a/css/frontpage.css
+++ b/css/frontpage.css
@@ -93,6 +93,20 @@ canvas {
     justify-content: center;
 }
 
+#errormsg {
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    color: red;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
+}
+
 /* hide spinner on number input */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
