--- a/Templates/frontpage.html
+++ b/Templates/frontpage.html
@@ -46,12 +46,15 @@
             <i class="fas fa-arrows-alt fa-2x"></i>
         </button>
     </div>
-    <div id="UserSettings">
+    <div id="errormsg">
+        test
+    </div>
+    <!--<div id="UserSettings">
         <button type="button" class="btn btn-primary" id="SettingsButton" data-toggle="modal"
                 data-target="#settingsModal">
             <i class="fas fa-cog fa-2x"></i>
         </button>
-    </div>
+    </div>-->
     <div id="DrawSettings">
         <div class="card">
             <div class="card-body">
