--- a/Templates/frontpage.html
+++ b/Templates/frontpage.html
@@ -45,6 +45,12 @@
         <button type="button" class="btn btn-primary" id="UIMoveSelectedMode">
             <i class="fas fa-arrows-alt fa-2x"></i>
         </button>
+        <button type="button" class="btn btn-primary" id="UIDeleteSelectionButton">
+            <i class="fas fa-trash-alt fa-2x"></i>
+        </button>
+        <button type="button" class="btn btn-primary" id="UIUndoButton">
+            <i class="fas fa-undo fa-2x"></i>
+        </button>
     </div>
     <div id="errormsg">
         test
