added share cursor

--- a/Templates/frontpage.html
+++ b/Templates/frontpage.html
@@ -45,6 +45,9 @@
         <button type="button" class="btn btn-primary" id="UIMoveSelectedMode">
             <i class="fas fa-arrows-alt fa-2x"></i>
         </button>
+        <button type="button" class="btn btn-primary" id="UIButtonShareCursorMode">
+            <i class="fas fa-mouse-pointer fa-2x"></i>
+        </button>
         <button type="button" class="btn btn-primary" id="UIDeleteSelectionButton">
             <i class="fas fa-trash-alt fa-2x"></i>
         </button>
