added export to svg and fixed copy paste

--- a/Templates/frontpage.html
+++ b/Templates/frontpage.html
@@ -54,6 +54,9 @@
         <button type="button" class="btn btn-primary" id="UIUndoButton">
             <i class="fas fa-undo fa-2x"></i>
         </button>
+        <button type="button" class="btn btn-primary" id="UISaveButton">
+            <i class="fas fa-save fa-2x"></i>
+        </button>
     </div>
     <div id="errormsg">
         test
